# AndroidAPM

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: ci.yml
apm-anr/: build.gradle.kts
apm-battery/: build.gradle.kts
apm-core/: build.gradle.kts
apm-crash/: build.gradle.kts
apm-crash/src/main/jni/: CMakeLists.txt  apm_crash_jni.c
apm-fps/: build.gradle.kts
apm-gc-monitor/: build.gradle.kts
apm-io/: build.gradle.kts
apm-ipc/: build.gradle.kts
apm-launch/: build.gradle.kts
apm-memory/: build.gradle.kts
apm-memory/src/main/jni/: CMakeLists.txt  apm_dumper_jni.c
apm-model/: build.gradle.kts
apm-network/: build.gradle.kts
apm-otel-exporter/: build.gradle.kts
apm-plugin/: build.gradle.kts  settings.gradle.kts
apm-render/: build.gradle.kts
apm-sample-app/: build.gradle.kts
apm-slow-method/: build.gradle.kts
apm-sqlite/: build.gradle.kts
apm-storage/: build.gradle.kts
apm-thread-monitor/: build.gradle.kts
apm-trace/: build.gradle.kts
apm-uploader/: build.gradle.kts
apm-webview/: build.gradle.kts
docs/: APM_对比报告.docx  APM_框架对比报告.docx  Android_APM_项目文档.md  amstart.sh  generate_report.py  monitor_app.sh  monitor_thread.sh
docs/architecture/: 00_整体架构.md  01_apm-core.md  02_apm-model-storage-uploader.md  03_apm-memory.md  04_apm-crash.md  05_apm-anr.md  06_apm-launch.md  07_apm-network.md  08_apm-fps.md  09_apm-slow-method.md  10_apm-io.md  11_apm-battery.md  12_apm-sqlite.md  13_apm-webview.md  14_apm-ipc.md  README.md  (+5 more)
gradle/: libs.versions.toml
(+277 files in other folders)
